# lifsaver

./: .gitignore  .pre-commit-config.yaml  .swiftlint.yml  Package.resolved  Package.swift  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
Sources/Lifsaver/: DiagnosticReportFlow.swift  DiskActivityWatcher.swift  EscalatedMount.swift  MountCoordinator.swift  Notifier.swift  StatusItemController.swift  main.swift
Sources/LifsaverApp/: AppDelegate.swift  DiagnosticReportFlow.swift  EscalatedMount.swift  MountCoordinator.swift  StatusItemController.swift  main.swift
Sources/LifsaverCore/: Console.swift  DiagnosticsReport.swift  MountTable.swift  Mounter.swift  Report.swift  Scanner.swift  StatusMenuModel.swift  UpdateChecker.swift  UpgradeCommand.swift  Version.swift
Sources/LifsaverKit/: Console.swift  DiagnosticsReport.swift  EscalatedMountHelper.swift  KernelMountTable.swift  MountReport.swift  Mounter.swift  ProcessRunner.swift  Report.swift  RootMountRunner.swift  Scanner.swift  StatusMenuModel.swift  UpdateChecker.swift
Sources/lifsaver/: LifsaverCommand.swift
Tests/LifsaverCLITests/: CLISmokeTests.swift  ReportCLITests.swift
Tests/LifsaverCoreTests/: DiagnosticsReportTests.swift  Fixtures.swift  MounterTests.swift  ProcessRunnerTests.swift  RootMountRunnerTests.swift  ScannerTargetSelectionTests.swift  ScannerTests.swift  StatusMenuModelTests.swift  UpdateCheckerTests.swift
Tests/LifsaverKitTests/: ConsoleTests.swift  DiagnosticsReportTests.swift  EscalatedMountHelperTests.swift  Fixtures.swift  KernelMountTableTests.swift  MounterPassTests.swift  MounterTests.swift  ProcessRunnerTests.swift  RealWorldCasesTests.swift  RootMountRunnerTests.swift  ScannerTargetSelectionTests.swift  ScannerTests.swift  StatusMenuModelTests.swift  UpdateCheckerTests.swift  VersionTests.swift
scripts/: version.sh
scripts/lint/: analyze.sh  llbuild_to_compile_commands.py
scripts/release/: build.sh  bundle_app.sh  make_pkg.sh
scripts/release/app-resources/: AppIcon.icns
scripts/release/installer-scripts/: postinstall
scripts/release/templates/: template_Info.plist  template_distribution.xml  template_lifsaver.rb
scripts/render/: demo_animation.swift  demo_gif.swift  icons.sh  social_preview.sh
src/lifsaver/: cli.py  update_checker.py
tests/: test_lifsaver.py  test_update_checker.py
